[Bug] Dark mode color

--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@
   --color-nav: rgb(255, 255, 255);
   --color-primary: #57af7a;
   --color-primary-light: #89c7a2;
+  --color-secondary: #5851ec;
   --color-highlight: #ffeaa7;
-  --color-highlight-2: #5851ec;
+  --color-highlight-text: #334259;
   --color-border: #ddd;
   --color-footer: rgb(244, 247, 250);
   --color-btn-bg: #e5edff;
@@ -241,7 +242,7 @@ a {
   font-weight: 600;
   font-size: 2.5rem;
   display: inline;
-  color: var(--color-highlight-2);
+  color: var(--color-secondary);
   position: relative;
 }
 
@@ -261,6 +262,7 @@ a {
   font-family: "Public Sans", sans-serif;
   display: inline-block;
   background: var(--color-highlight);
+  color: var(--color-highlight-text);
   font-weight: 500;
   padding: 0 0.5rem;
   margin-bottom: 1rem;
@@ -329,7 +331,7 @@ a {
   display: inline-block;
   cursor: pointer;
   padding: 0.2rem 0.5rem;
-  color: var(--color-highlight-2);
+  color: var(--color-secondary);
   background-color: var(--color-btn-bg);
   border-radius: 0.3rem;
 }
@@ -354,7 +356,7 @@ a {
   transform: translate(-101%, -50%);
   width: 100%;
   height: 100%;
-  background-color: var(--color-highlight-2);
+  background-color: var(--color-secondary);
   transition: transform 0.25s cubic-bezier(0.7, 0, 0.9, 1);
 }
 
